--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -4,3 +4,4 @@ encoding//src/SpreadsheetSample.py=utf-8
 encoding//src/cellcursor.py=utf-8
 encoding//src/getcelladdress.py=utf-8
 encoding//src/tcucalc.py=utf-8
+encoding//src/wclick.py=utf-8
