--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//src/GeneralTableSample.py=utf-8
 encoding//src/SpreadsheetSample.py=utf-8
 encoding//src/cellcursor.py=utf-8
+encoding//src/docopen.py=utf-8
 encoding//src/endcell.py=utf-8
 encoding//src/getcelladdress.py=utf-8
 encoding//src/tcucalc.py=utf-8
