--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,8 @@ encoding//src/GeneralTableSample.py=utf-8
 encoding//src/SpreadsheetSample.py=utf-8
 encoding//src/contextmenu/contextmenuinterceptor.py=utf-8
 encoding//src/contextmenu/cotextmenuembedded.py=utf-8
+encoding//src/contextmenu/cotextmenuembedded2.py=utf-8
+encoding//src/contextmenu/cotextmenuembedded3.py=utf-8
 encoding//src/contextmenu/nestedcontextmenuinterceptor.py=utf-8
 encoding//src/contextmenu/nondispatchcommand.py=utf-8
 encoding//src/etc/calcmacro.py=utf-8
