--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -5,12 +5,14 @@ encoding//src/contextmenu/ExtractContexMenuItems.py=utf-8
 encoding//src/contextmenu/ExtractContexMenuItems2.py=utf-8
 encoding//src/contextmenu/GenerateScriptingURL.py=utf-8
 encoding//src/contextmenu/ScriptingURLArgs.py=utf-8
+encoding//src/contextmenu/TraceToRoot.py=utf-8
 encoding//src/contextmenu/contextmenuinterceptor.py=utf-8
 encoding//src/contextmenu/cotextmenuembedded.py=utf-8
 encoding//src/contextmenu/cotextmenuembedded2.py=utf-8
 encoding//src/contextmenu/cotextmenuembedded3.py=utf-8
 encoding//src/contextmenu/nestedcontextmenuinterceptor.py=utf-8
 encoding//src/contextmenu/nondispatchcommand.py=utf-8
+encoding//src/contextmenu/xpathtext.py=utf-8
 encoding//src/date/CellToDateObject.py=utf-8
 encoding//src/date/CellToDateObject2.py=utf-8
 encoding//src/date/GetDateFromCell.py=utf-8
