--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -29,4 +29,5 @@ encoding//src/etc/getcelladdress.py=utf-8
 encoding//src/etc/onload.py=utf-8
 encoding//src/etc/tcucalc.py=utf-8
 encoding//src/etc/wclick.py=utf-8
+encoding//src/moveSheet/getUIComponents.py=utf-8
 encoding//src/moveSheet/toAnotherDoc.py=utf-8
