--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -32,4 +32,5 @@ encoding//src/etc/wclick.py=utf-8
 encoding//src/moveSheet/ExportSheet.py=utf-8
 encoding//src/moveSheet/getUIComponents.py=utf-8
 encoding//src/moveSheet/showUIComponents.py=utf-8
+encoding//src/moveSheet/showUIComponents2.py=utf-8
 encoding//src/moveSheet/toAnotherDoc.py=utf-8
