--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -33,4 +33,5 @@ encoding//src/moveSheet/ExportSheet.py=utf-8
 encoding//src/moveSheet/getUIComponents.py=utf-8
 encoding//src/moveSheet/showUIComponents.py=utf-8
 encoding//src/moveSheet/showUIComponents2.py=utf-8
+encoding//src/moveSheet/tmp.py=utf-8
 encoding//src/moveSheet/toAnotherDoc.py=utf-8
