--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/GeneralTableSample.py=utf-8
 encoding//src/SpreadsheetSample.py=utf-8
+encoding//src/borderline/borderline.py=utf-8
 encoding//src/contextmenu/DeleteDefaultContextMenuEntries.py=utf-8
 encoding//src/contextmenu/ExtractContexMenuItems.py=utf-8
 encoding//src/contextmenu/ExtractContexMenuItems2.py=utf-8
@@ -25,6 +26,7 @@ encoding//src/date/UseSheetFunction.py=utf-8
 encoding//src/etc/calcmacro.py=utf-8
 encoding//src/etc/cellcursor.py=utf-8
 encoding//src/etc/endcell.py=utf-8
+encoding//src/etc/exception.py=utf-8
 encoding//src/etc/getcelladdress.py=utf-8
 encoding//src/etc/onload.py=utf-8
 encoding//src/etc/tcucalc.py=utf-8
