--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -25,6 +25,7 @@ encoding//src/date/InputDateToCell.py=utf-8
 encoding//src/date/UseSheetFunction.py=utf-8
 encoding//src/documentevents/docevents.py=utf-8
 encoding//src/documentevents/docevents2.py=utf-8
+encoding//src/documentevents/sheetevents.py=utf-8
 encoding//src/etc/calcmacro.py=utf-8
 encoding//src/etc/cellcursor.py=utf-8
 encoding//src/etc/endcell.py=utf-8
