--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/GeneralTableSample.py=utf-8
+encoding//src/Listeners/comparetime.py=utf-8
 encoding//src/Listeners/listenersforcalc.py=utf-8
 encoding//src/Listeners/listenersforcalc2.py=utf-8
 encoding//src/Listeners/listenersfordesktop.py=utf-8
