--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,7 @@ encoding//src/Listeners/comparetime.py=utf-8
 encoding//src/Listeners/listenersforcalc.py=utf-8
 encoding//src/Listeners/listenersforcalc2.py=utf-8
 encoding//src/Listeners/listenersforcalcSourceAttr.py=utf-8
+encoding//src/Listeners/listenersforcalcSourceAttrMouse.py=utf-8
 encoding//src/Listeners/listenersfordesktop.py=utf-8
 encoding//src/Listeners/listenersfordesktop2.py=utf-8
 encoding//src/SpreadsheetSample.py=utf-8
