--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -9,6 +9,9 @@ encoding//src/Listeners/listenersfordesktop.py=utf-8
 encoding//src/Listeners/listenersfordesktop2.py=utf-8
 encoding//src/SpreadsheetSample.py=utf-8
 encoding//src/borderline/borderline2.py=utf-8
+encoding//src/clipboard/Clipboard.py=utf-8
+encoding//src/clipboard/clipboardforcalc.py=utf-8
+encoding//src/clipboard/clipboardforcalc2.py=utf-8
 encoding//src/contextmenu/DeleteDefaultContextMenuEntries.py=utf-8
 encoding//src/contextmenu/ExtractContexMenuItems.py=utf-8
 encoding//src/contextmenu/ExtractContexMenuItems2.py=utf-8
