--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -36,12 +36,14 @@ encoding//src/date/UseSheetFunction.py=utf-8
 encoding//src/documentevents/docevents.py=utf-8
 encoding//src/documentevents/docevents2.py=utf-8
 encoding//src/documentevents/sheetevents.py=utf-8
+encoding//src/etc/cal.py=utf-8
 encoding//src/etc/calcmacro.py=utf-8
 encoding//src/etc/cellcursor.py=utf-8
 encoding//src/etc/endcell.py=utf-8
 encoding//src/etc/exception.py=utf-8
 encoding//src/etc/getcelladdress.py=utf-8
 encoding//src/etc/onload.py=utf-8
+encoding//src/etc/progressbar.py=utf-8
 encoding//src/etc/tcucalc.py=utf-8
 encoding//src/etc/wclick.py=utf-8
 encoding//src/moveSheet/ExportSheet.py=utf-8
@@ -50,3 +52,4 @@ encoding//src/moveSheet/showUIComponents.py=utf-8
 encoding//src/moveSheet/showUIComponents2.py=utf-8
 encoding//src/moveSheet/tmp.py=utf-8
 encoding//src/moveSheet/toAnotherDoc.py=utf-8
+encoding//src/nihongo/henkan.py=utf-8
