--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -8,6 +8,7 @@ encoding//src/Listeners/listenersforcalcSourceAttrMouse.py=utf-8
 encoding//src/Listeners/listenersfordesktop.py=utf-8
 encoding//src/Listeners/listenersfordesktop2.py=utf-8
 encoding//src/SpreadsheetSample.py=utf-8
+encoding//src/borderline/borderline.py=utf-8
 encoding//src/borderline/borderline2.py=utf-8
 encoding//src/clipboard/Clipboard.py=utf-8
 encoding//src/clipboard/clipboardforcalc.py=utf-8
@@ -35,6 +36,7 @@ encoding//src/date/GetDateFromCell.py=utf-8
 encoding//src/date/InputDateToCell.py=utf-8
 encoding//src/date/UseSheetFunction.py=utf-8
 encoding//src/datepicker/cal.py=utf-8
+encoding//src/datepicker/datepicker.py=utf-8
 encoding//src/datepicker/displaynomodalwindow.py=utf-8
 encoding//src/documentevents/docevents.py=utf-8
 encoding//src/documentevents/docevents2.py=utf-8
