--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -57,5 +57,6 @@ encoding//src/moveSheet/showUIComponents2.py=utf-8
 encoding//src/moveSheet/tmp.py=utf-8
 encoding//src/moveSheet/toAnotherDoc.py=utf-8
 encoding//src/windows/AccessibleRole.py=utf-8
+encoding//src/windows/controllers.py=utf-8
 encoding//src/windows/displaynomodalwindow.py=utf-8
 encoding//src/windows/subwindows.py=utf-8
