--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -60,3 +60,4 @@ encoding//src/windows/AccessibleRole.py=utf-8
 encoding//src/windows/controllers.py=utf-8
 encoding//src/windows/displaynomodalwindow.py=utf-8
 encoding//src/windows/subwindows.py=utf-8
+encoding//src/windows/unitconverter.py=utf-8
