--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -58,6 +58,7 @@ encoding//src/moveSheet/tmp.py=utf-8
 encoding//src/moveSheet/toAnotherDoc.py=utf-8
 encoding//src/unocontroldialog/gridcontrol.py=utf-8
 encoding//src/unocontroldialog/gridcontrollisteners.py=utf-8
+encoding//src/unocontroldialog/gridcontrollisteners2.py=utf-8
 encoding//src/unocontroldialog/unitconverter.py=utf-8
 encoding//src/windows/AccessibleRole.py=utf-8
 encoding//src/windows/controllers.py=utf-8
