--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -63,4 +63,5 @@ encoding//src/unocontroldialog/unitconverter.py=utf-8
 encoding//src/windows/AccessibleRole.py=utf-8
 encoding//src/windows/controllers.py=utf-8
 encoding//src/windows/displaynomodalwindow.py=utf-8
+encoding//src/windows/mouseposition.py=utf-8
 encoding//src/windows/subwindows.py=utf-8
