--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -61,8 +61,10 @@ encoding//src/unocontroldialog/gridcontrollisteners.py=utf-8
 encoding//src/unocontroldialog/gridcontrollisteners2.py=utf-8
 encoding//src/unocontroldialog/unitconverter.py=utf-8
 encoding//src/windows/AccessibleRole.py=utf-8
+encoding//src/windows/comonentwindowposition.py=utf-8
 encoding//src/windows/containerwindowmouseclistener.py=utf-8
 encoding//src/windows/controllers.py=utf-8
 encoding//src/windows/displaynomodalwindow.py=utf-8
 encoding//src/windows/enhancedmouseclickhandler.py=utf-8
+encoding//src/windows/mouseclickhandler.py=utf-8
 encoding//src/windows/subwindows.py=utf-8
