--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -45,6 +45,7 @@ encoding//src/etc/cellcursor.py=utf-8
 encoding//src/etc/endcell.py=utf-8
 encoding//src/etc/exception.py=utf-8
 encoding//src/etc/getcelladdress.py=utf-8
+encoding//src/etc/mergedcell.py=utf-8
 encoding//src/etc/onload.py=utf-8
 encoding//src/etc/progressbar.py=utf-8
 encoding//src/etc/tcucalc.py=utf-8
