--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -40,6 +40,9 @@ encoding//src/datepicker/datepicker.py=utf-8
 encoding//src/documentevents/docevents.py=utf-8
 encoding//src/documentevents/docevents2.py=utf-8
 encoding//src/documentevents/sheetevents.py=utf-8
+encoding//src/etc/ColorPalette.py=utf-8
+encoding//src/etc/ColorPalette_writeable.py=utf-8
+encoding//src/etc/SenseColumnInsertion.py=utf-8
 encoding//src/etc/calcmacro.py=utf-8
 encoding//src/etc/cellcursor.py=utf-8
 encoding//src/etc/endcell.py=utf-8
