--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -82,3 +82,4 @@ encoding//src/windows/PopupNonmodalDialogListenerLog.py=utf-8
 encoding//src/windows/WindowPositions.py=utf-8
 encoding//src/windows/containerwindowmouseclistener.py=utf-8
 encoding//src/windows/controllers.py=utf-8
+encoding//src/windows/inBackGround.py=utf-8
