--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -7,6 +7,7 @@ encoding//src/Listeners/listenersforcalcSourceAttr.py=utf-8
 encoding//src/Listeners/listenersforcalcSourceAttrMouse.py=utf-8
 encoding//src/Listeners/listenersfordesktop.py=utf-8
 encoding//src/Listeners/listenersfordesktop2.py=utf-8
+encoding//src/Listeners/lock.py=utf-8
 encoding//src/SpreadsheetSample.py=utf-8
 encoding//src/borderline/borderline.py=utf-8
 encoding//src/borderline/borderline2.py=utf-8
