--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -63,6 +63,7 @@ encoding//src/moveSheet/showUIComponents.py=utf-8
 encoding//src/moveSheet/showUIComponents2.py=utf-8
 encoding//src/moveSheet/tmp.py=utf-8
 encoding//src/moveSheet/toAnotherDoc.py=utf-8
+encoding//src/namedranges/NamedRanges.py=utf-8
 encoding//src/sensinginsertion/columninsertion.py=utf-8
 encoding//src/unocontroldialog/gridcontrol.py=utf-8
 encoding//src/unocontroldialog/gridcontrollisteners.py=utf-8
