--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -66,6 +66,9 @@ encoding//src/moveSheet/tmp.py=utf-8
 encoding//src/moveSheet/toAnotherDoc.py=utf-8
 encoding//src/namedranges/NamedRanges.py=utf-8
 encoding//src/sensinginsertion/columninsertion.py=utf-8
+encoding//src/tcu/forVariousObjects.py=utf-8
+encoding//src/tcu/forVariousObjects2.py=utf-8
+encoding//src/tcu/forVariousObjects3.py=utf-8
 encoding//src/unocontroldialog/gridcontrol.py=utf-8
 encoding//src/unocontroldialog/gridcontrollisteners.py=utf-8
 encoding//src/unocontroldialog/gridcontrollisteners2.py=utf-8
