--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -66,6 +66,7 @@ encoding//src/sensinginsertion/columninsertion.py=utf-8
 encoding//src/tcu/forVariousObjects.py=utf-8
 encoding//src/tcu/forVariousObjects2.py=utf-8
 encoding//src/tcu/forVariousObjects3.py=utf-8
+encoding//src/tcu/forVariousObjects4.py=utf-8
 encoding//src/tcu/tcucalc.py=utf-8
 encoding//src/tcu/tcucalc2.py=utf-8
 encoding//src/tcu/tcuclaclines.py=utf-8
