--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,7 @@ encoding//src/Listeners/listenersforcalc.py=utf-8
 encoding//src/Listeners/listenersforcalc2.py=utf-8
 encoding//src/Listeners/listenersforcalcSourceAttr.py=utf-8
 encoding//src/Listeners/listenersforcalcSourceAttrMouse.py=utf-8
+encoding//src/Listeners/listenersforcalcSourceAttrforTemp.py=utf-8
 encoding//src/Listeners/listenersfordesktop.py=utf-8
 encoding//src/Listeners/listenersfordesktop2.py=utf-8
 encoding//src/Listeners/lock.py=utf-8
@@ -65,6 +66,9 @@ encoding//src/moveSheet/tmp.py=utf-8
 encoding//src/moveSheet/toAnotherDoc.py=utf-8
 encoding//src/namedranges/NamedRanges.py=utf-8
 encoding//src/sensinginsertion/columninsertion.py=utf-8
+encoding//src/sort/sortexam.py=utf-8
+encoding//src/sort/sortexam3.py=utf-8
+encoding//src/sort/sortexam4.py=utf-8
 encoding//src/tcu/forVariousObjects.py=utf-8
 encoding//src/tcu/forVariousObjects2.py=utf-8
 encoding//src/tcu/forVariousObjects3.py=utf-8
