--- a/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
+++ b/SpreadSheetExample/.settings/org.eclipse.core.resources.prefs
@@ -65,6 +65,8 @@ encoding//src/moveSheet/showUIComponents2.py=utf-8
 encoding//src/moveSheet/tmp.py=utf-8
 encoding//src/moveSheet/toAnotherDoc.py=utf-8
 encoding//src/namedranges/NamedRanges.py=utf-8
+encoding//src/printareas/pagesize.py=utf-8
+encoding//src/printareas/tcucalc.py=utf-8
 encoding//src/sensinginsertion/columninsertion.py=utf-8
 encoding//src/sort/sortexam.py=utf-8
 encoding//src/sort/sortexam3.py=utf-8
